update: package.json

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "fetch-npm",
   "version": "1.0.0",
   "description": "",
-  "main": "test.js",
+  "main": "umd.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Kasper Birch",
+  "license": "MIT",
   "dependencies": {
     "jquery": "^3.4.1",
     "node-fetch": "^2.6.0"
