--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fetch-npm",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Easy fetch",
   "main": "umd.js",
   "scripts": {
@@ -11,5 +11,17 @@
   "dependencies": {
     "jquery": "^3.4.1",
     "node-fetch": "^2.6.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kasperbirch1/myfetch-npm.git"
+  },
+  "keywords": [
+    "fetch"
+  ],
+  "bugs": {
+    "url": "https://github.com/kasperbirch1/myfetch-npm/issues"
+  },
+  "homepage": "https://github.com/kasperbirch1/myfetch-npm#readme"
 }
